--- a/public/t1a15-events-aden.html
+++ b/public/t1a15-events-aden.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Event Handling Example</title>
+    <style>
+        body {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: #f0f0f0;
+        }
+        #coordinates, #message {
+            margin: 10px;
+            padding: 10px;
+            border: 1px solid #333;
+            width: 200px;
+            text-align: center;
+        }
+    </style>
+</head>
+<body onmousemove="document.getElementById('coordinates').innerHTML = 'x: ' + event.clientX + ', y: ' + event.clientY" 
+      onkeydown="document.getElementById('coordinates').innerHTML = 'key: ' + event.key">
+    
+    <b onTouchEnd="document.getElementById('coordinates').innerHTML = 'onTouchEnd'">Input:</b>
 
+    <input type="text" id="myFirstName" value="Aden" onblur="document.getElementById('coordinates').innerHTML = 'onBlur'"><br><br>
+
+    <input type="button" value="Show on Page" onclick="document.getElementById('message').innerHTML = 'Hey!'"><br><br>
+
+    <div id="coordinates">...</div>
+    <div id="message">...</div>
+
+</body>
+</html>
