--- a/public/webcam-basic.html
+++ b/public/webcam-basic.html
@@ -5,13 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webcam Capture</title>
     <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+            font-family: Arial, sans-serif;
+        }
         video {
-            width: 300px;
+            width: 100%; /* Make it responsive */
+            max-width: 400px; /* Limit the maximum width */
             height: auto;
             border: 1px solid black;
         }
         canvas {
-            display: none; /* We use canvas to temporarily store the image */
+            display: none; /* Use canvas to temporarily store the image */
+        }
+        input, button {
+            width: 100%;
+            max-width: 200px; /* Limit the width on mobile */
+            margin-top: 10px;
+            padding: 10px;
+            font-size: 1em;
         }
     </style>
 </head>
@@ -36,6 +52,7 @@
             })
             .catch(err => {
                 console.error("Error accessing webcam: " + err);
+                alert("Unable to access webcam. Please check your permissions.");
             });
 
         // Capture the image
