--- a/public/webcam-basic.html
+++ b/public/webcam-basic.html
@@ -12,12 +12,14 @@
             justify-content: center;
             padding: 20px;
             font-family: Arial, sans-serif;
+            background-color: #f4f4f4; /* Light background color */
         }
         video {
-            width: 100%; /* Make it responsive */
-            max-width: 400px; /* Limit the maximum width */
+            width: 100%;
+            max-width: 400px; /* Limit maximum width */
             height: auto;
             border: 1px solid black;
+            border-radius: 8px; /* Rounded corners */
         }
         canvas {
             display: none; /* Use canvas to temporarily store the image */
@@ -28,14 +30,23 @@
             margin-top: 10px;
             padding: 10px;
             font-size: 1em;
+            border-radius: 8px; /* Rounded corners for inputs and buttons */
+            border: 1px solid #ccc; /* Light border */
+        }
+        button {
+            background-color: #007bff; /* Bootstrap primary color */
+            color: white; /* White text for contrast */
+            cursor: pointer; /* Pointer cursor on hover */
+        }
+        button:hover {
+            background-color: #0056b3; /* Darken button on hover */
         }
     </style>
 </head>
 <body>
     <h1>Webcam Capture</h1>
-    <video id="video" autoplay></video>
+    <video id="video" autoplay playsinline></video> <!-- Added playsinline for iPhone -->
     <canvas id="canvas"></canvas>
-    <br>
     <input type="text" id="filename" placeholder="Enter filename" />
     <button id="capture">Capture</button>
 
