--- a/public/t1a16-multi-d-arrays-Aden.html
+++ b/public/t1a16-multi-d-arrays-Aden.html
@@ -1,36 +1,48 @@
-<h1 align=center>t1a16-multi-d-arrays-Aden.html<h1></h1>
+<h1 align="center">t1a16-multi-d-arrays-Aden.html</h1>
 <script>
-    // set a few Global Varibles
-    let myMa = 3
-    let myArrayManual = new Array(myMax)
-    let myArrayAuto = new Array(myMax)
+    // set a few Global Variables
+    let myMax = 3; // corrected from myMa to myMax
+    let myArrayManual = new Array(myMax);
+    let myArrayAuto = new Array(myMax);
 </script> 
-Input:<input type=text id="myFirstName" value="fred"><br>
 
-<input type=button value="Set Manual Array" onclick="{
-    myArrayManual = [ [3,4,2], [1,2,3,], [5,6,7] ]
+Input:<input type="text" id="myFirstName" value="fred"><br>
 
-    documet.getElementById('myDiv01').innerHTML = 'You set the array'
+<input type="button" value="Set Manual Array" onclick="{
+    myArrayManual = [ [3, 4, 2], [1, 2, 3], [5, 6, 7] ];
+    document.getElementById('myDiv01').innerHTML = 'You set the array';
 }">
 
-<input type=button value="Show Manual Array" onclick="{
-  documet.getElementById('myDiv01').innerHTML = ''
-    console.log(myArrayManual)
+<input type="button" value="Show Manual Array" onclick="{
+    document.getElementById('myDiv01').innerHTML = '';
+    console.log(myArrayManual);
 
-    for (myLoop0=0;  myLoop0 < myMax; myLoop0++){
-       for (myLoop1=0;  myLoop1 < myMax; myLoop1++){
-
-       documet.getElementById('myDiv01').innerHTML +=
-        myArrayManual[${myLoop0},${myLoop1}] =
-${myArrayManual[myLoop0][myLoop1]} <br>
-     }
+    for (let myLoop0 = 0; myLoop0 < myMax; myLoop0++) {
+        for (let myLoop1 = 0; myLoop1 < myArrayManual[myLoop0].length; myLoop1++) {
+            document.getElementById('myDiv01').innerHTML +=
+                `myArrayManual[${myLoop0}][${myLoop1}] = ${myArrayManual[myLoop0][myLoop1]} <br>`;
+        }
     }
 }">
-<input type=button value="Set Auto Array" onclick="{
-    myArrayAuto[0,0] = Math.floor(Math.random() * 100)
-    documet.getElementById('myDiv01').innerHTML = myArrayAuto[0,0]
+
+<input type="button" value="Set Auto Array" onclick="{
+    for (let i = 0; i < myMax; i++) {
+        myArrayAuto[i] = new Array(myMax); // initialize each sub-array
+        for (let j = 0; j < myMax; j++) {
+            myArrayAuto[i][j] = Math.floor(Math.random() * 100);
+        }
+    }
+    document.getElementById('myDiv01').innerHTML = 'Auto array set';
 }">
-<input type=button value="Show Auto Array" onclick="{
-    documet.getElementById('myDiv01').innerHTML += 'myArrayAuto'
+
+<input type="button" value="Show Auto Array" onclick="{
+    document.getElementById('myDiv01').innerHTML += '<br>Auto Array:<br>';
+    for (let i = 0; i < myMax; i++) {
+        for (let j = 0; j < myArrayAuto[i].length; j++) {
+            document.getElementById('myDiv01').innerHTML +=
+                `myArrayAuto[${i}][${j}] = ${myArrayAuto[i][j]} <br>`;
+        }
+    }
 }"><br>
+
 <div id="myDiv01">...</div>
