--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,9 +6,10 @@
     <title>Multi-Dimensional Arrays</title>
     <script>
         // Set a few Global Variables
-        let myMax = 3; // corrected from myMa to myMax
+        let myMax = 3; // Number of rows/columns
         let myArrayManual = new Array(myMax);
         let myArrayAuto = new Array(myMax);
+        let myArrayThird = new Array(myMax); // New third array
     </script>
 </head>
 <body>
@@ -19,7 +20,7 @@ Input: <input type="text" id="myFirstName" value="fred"><br>
 
 <input type="button" value="Set Manual Array" onclick="{
     myArrayManual = [ [3, 4, 2], [1, 2, 3], [5, 6, 7] ];
-    document.getElementById('myDiv01').innerHTML = 'You set the array';
+    document.getElementById('myDiv01').innerHTML = 'You set the manual array';
 }">
 
 <input type="button" value="Show Manual Array" onclick="{
@@ -50,6 +51,22 @@ Input: <input type="text" id="myFirstName" value="fred"><br>
         for (let j = 0; j < myArrayAuto[i].length; j++) {
             document.getElementById('myDiv01').innerHTML +=
                 `myArrayAuto[${i}][${j}] = ${myArrayAuto[i][j]} <br>`;
+        }
+    }
+}"><br>
+
+<!-- New buttons for the third array -->
+<input type="button" value="Set Third Array" onclick="{
+    myArrayThird = [ [10, 20, 30], [40, 50, 60], [70, 80, 90] ]; // Example values
+    document.getElementById('myDiv01').innerHTML = 'You set the third array';
+}">
+
+<input type="button" value="Show Third Array" onclick="{
+    document.getElementById('myDiv01').innerHTML += '<br>Third Array:<br>';
+    for (let myLoop0 = 0; myLoop0 < myMax; myLoop0++) {
+        for (let myLoop1 = 0; myLoop1 < myArrayThird[myLoop0].length; myLoop1++) {
+            document.getElementById('myDiv01').innerHTML +=
+                `myArrayThird[${myLoop0}][${myLoop1}] = ${myArrayThird[myLoop0][myLoop1]} <br>`;
         }
     }
 }"><br>
