--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,77 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi-Dimensional Arrays</title>
-    <script>
-        // Set a few Global Variables
-        let myMax = 3; // Number of rows/columns
-        let myArrayManual = new Array(myMax);
-        let myArrayAuto = new Array(myMax);
-        let myArrayThird = new Array(myMax); // New third array
-    </script>
-</head>
-<body>
+#include <iostream>
+using namespace std;
 
-<h1 align="center">t1a16-multi-d-arrays-Aden.html</h1>
+int main() {
+    // Creating a 2D array (3 rows x 4 columns)
+    int array2D[3][4] = {
+        {1, 2, 3, 4},
+        {5, 6, 7, 8},
+        {9, 10, 11, 12}
+    };
 
-Input: <input type="text" id="myFirstName" value="fred"><br>
-
-<input type="button" value="Set Manual Array" onclick="{
-    myArrayManual = [ [3, 4, 2], [1, 2, 3], [5, 6, 7] ];
-    document.getElementById('myDiv01').innerHTML = 'You set the manual array';
-}">
-
-<input type="button" value="Show Manual Array" onclick="{
-    document.getElementById('myDiv01').innerHTML = '';
-    console.log(myArrayManual);
-
-    for (let myLoop0 = 0; myLoop0 < myMax; myLoop0++) {
-        for (let myLoop1 = 0; myLoop1 < myArrayManual[myLoop0].length; myLoop1++) {
-            document.getElementById('myDiv01').innerHTML +=
-                `myArrayManual[${myLoop0}][${myLoop1}] = ${myArrayManual[myLoop0][myLoop1]} <br>`;
-        }
-    }
-}">
-
-<input type="button" value="Set Auto Array" onclick="{
-    for (let i = 0; i < myMax; i++) {
-        myArrayAuto[i] = new Array(myMax); // Initialize each sub-array
-        for (let j = 0; j < myMax; j++) {
-            myArrayAuto[i][j] = Math.floor(Math.random() * 100);
-        }
-    }
-    document.getElementById('myDiv01').innerHTML = 'Auto array set';
-}">
-
-<input type="button" value="Show Auto Array" onclick="{
-    document.getElementById('myDiv01').innerHTML += '<br>Auto Array:<br>';
-    for (let i = 0; i < myMax; i++) {
-        for (let j = 0; j < myArrayAuto[i].length; j++) {
-            document.getElementById('myDiv01').innerHTML +=
-                `myArrayAuto[${i}][${j}] = ${myArrayAuto[i][j]} <br>`;
-        }
-    }
-}"><br>
-
-<!-- New buttons for the third array -->
-<input type="button" value="Set Third Array" onclick="{
-    myArrayThird = [ [10, 20, 30], [40, 50, 60], [70, 80, 90] ]; // Example values
-    document.getElementById('myDiv01').innerHTML = 'You set the third array';
-}">
-
-<input type="button" value="Show Third Array" onclick="{
-    document.getElementById('myDiv01').innerHTML += '<br>Third Array:<br>';
-    for (let myLoop0 = 0; myLoop0 < myMax; myLoop0++) {
-        for (let myLoop1 = 0; myLoop1 < myArrayThird[myLoop0].length; myLoop1++) {
-            document.getElementById('myDiv01').innerHTML +=
-                `myArrayThird[${myLoop0}][${myLoop1}] = ${myArrayThird[myLoop0][myLoop1]} <br>`;
-        }
-    }
-}"><br>
-
-<div id="myDiv01">...</div>
-
-</body>
-</html>
+    // Accessing an element
+    cout << array2D[1][2] << endl;  // Output: 7
+    return 0;
+}
