--- a/public/t1a16-multi-d-arrays-Aden.html
+++ b/public/t1a16-multi-d-arrays-Aden.html
@@ -1,48 +1,105 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Multi-Dimensional Arrays Example</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            color: #34495e;
+            text-shadow: 1px 1px 5px #ecf0f1;
+        }
+        input[type="button"] {
+            background-color: #3498db;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            margin: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            border-radius: 5px;
+        }
+        input[type="button"]:hover {
+            background-color: #2980b9;
+        }
+        #myDiv01 {
+            background-color: #ffffff;
+            border: 1px solid #bdc3c7;
+            border-radius: 5px;
+            padding: 20px;
+            margin-top: 20px;
+            max-height: 300px;
+            overflow-y: auto;
+        }
+    </style>
+</head>
+<body>
+
 <h1 align="center">t1a16-multi-d-arrays-Aden.html</h1>
+
 <script>
-    // set a few Global Variables
+    // Set a few Global Variables
     let myMax = 3; // corrected from myMa to myMax
     let myArrayManual = new Array(myMax);
     let myArrayAuto = new Array(myMax);
-</script> 
+</script>
 
-Input:<input type="text" id="myFirstName" value="fred"><br>
+<div style="text-align: center;">
+    <label for="myFirstName">Input:</label>
+    <input type="text" id="myFirstName" value="fred"><br><br>
 
-<input type="button" value="Set Manual Array" onclick="{
-    myArrayManual = [ [3, 4, 2], [1, 2, 3], [5, 6, 7] ];
-    document.getElementById('myDiv01').innerHTML = 'You set the array';
-}">
-
-<input type="button" value="Show Manual Array" onclick="{
-    document.getElementById('myDiv01').innerHTML = '';
-    console.log(myArrayManual);
-
-    for (let myLoop0 = 0; myLoop0 < myMax; myLoop0++) {
-        for (let myLoop1 = 0; myLoop1 < myArrayManual[myLoop0].length; myLoop1++) {
-            document.getElementById('myDiv01').innerHTML +=
-                `myArrayManual[${myLoop0}][${myLoop1}] = ${myArrayManual[myLoop0][myLoop1]} <br>`;
-        }
-    }
-}">
-
-<input type="button" value="Set Auto Array" onclick="{
-    for (let i = 0; i < myMax; i++) {
-        myArrayAuto[i] = new Array(myMax); // initialize each sub-array
-        for (let j = 0; j < myMax; j++) {
-            myArrayAuto[i][j] = Math.floor(Math.random() * 100);
-        }
-    }
-    document.getElementById('myDiv01').innerHTML = 'Auto array set';
-}">
-
-<input type="button" value="Show Auto Array" onclick="{
-    document.getElementById('myDiv01').innerHTML += '<br>Auto Array:<br>';
-    for (let i = 0; i < myMax; i++) {
-        for (let j = 0; j < myArrayAuto[i].length; j++) {
-            document.getElementById('myDiv01').innerHTML +=
-                `myArrayAuto[${i}][${j}] = ${myArrayAuto[i][j]} <br>`;
-        }
-    }
-}"><br>
+    <input type="button" value="Set Manual Array" onclick="setManualArray()">
+    <input type="button" value="Show Manual Array" onclick="showManualArray()">
+    <input type="button" value="Set Auto Array" onclick="setAutoArray()">
+    <input type="button" value="Show Auto Array" onclick="showAutoArray()">
+</div>
 
 <div id="myDiv01">...</div>
+
+<script>
+    function setManualArray() {
+        myArrayManual = [[3, 4, 2], [1, 2, 3], [5, 6, 7]];
+        document.getElementById('myDiv01').innerHTML = '<strong>Manual Array Set!</strong>';
+    }
+
+    function showManualArray() {
+        document.getElementById('myDiv01').innerHTML = '<strong>Manual Array:</strong><br>';
+        console.log(myArrayManual);
+
+        for (let myLoop0 = 0; myLoop0 < myMax; myLoop0++) {
+            for (let myLoop1 = 0; myLoop1 < myArrayManual[myLoop0].length; myLoop1++) {
+                document.getElementById('myDiv01').innerHTML +=
+                    `myArrayManual[${myLoop0}][${myLoop1}] = ${myArrayManual[myLoop0][myLoop1]} <br>`;
+            }
+        }
+    }
+
+    function setAutoArray() {
+        for (let i = 0; i < myMax; i++) {
+            myArrayAuto[i] = new Array(myMax); // initialize each sub-array
+            for (let j = 0; j < myMax; j++) {
+                myArrayAuto[i][j] = Math.floor(Math.random() * 100);
+            }
+        }
+        document.getElementById('myDiv01').innerHTML = '<strong>Auto Array Set!</strong>';
+    }
+
+    function showAutoArray() {
+        document.getElementById('myDiv01').innerHTML += '<br><strong>Auto Array:</strong><br>';
+        for (let i = 0; i < myMax; i++) {
+            for (let j = 0; j < myArrayAuto[i].length; j++) {
+                document.getElementById('myDiv01').innerHTML +=
+                    `myArrayAuto[${i}][${j}] = ${myArrayAuto[i][j]} <br>`;
+            }
+        }
+    }
+</script>
+
+</body>
+</html>
