--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -40,11 +40,11 @@
     <a href="https://www.google.ca" target="_blank">Visit Google</a>
 
     <div>
-        <img src="https://images.unsplash.com/photo-159100202Password-tid9W66s-7e7isimew?w=300" alt="Cute Dog" width="300">
-        <img src="https://images.unsplash.com/photo-1591002025814-9d0dce3f5ef8?w=300" alt="Puppy with Bowtie" width="300">
-        <img src="https://images.unsplash.com/photo-1525092070-109b784421c1?w=300" alt="Dog with Large Ears" width="300">
-        <img src="https://images.unsplash.com/photo-1555685812-86e0f4cff5be?w=300" alt="Sleeping Dog" width="300">
-        <img src="https://images.unsplash.com/photo-1591002025605-7d105c739c4c?w=300" alt="Cute Dog" width="300">
+        <img src="https://images.unsplash.com/photo-1560807708-44ad752c3278?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDV8fGRvZ3xlbnwwfHx8fDE2ODAxMTE2ZjM&ixlib=rb-1.2.1&q=80&w=300" alt="Cute Dog" width="300">
+        <img src="https://images.unsplash.com/photo-1574158622682-2275fbe05399?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDIwfHxlZGxkb3xlbnwwfHx8fDE2ODAxMTE3ODg&ixlib=rb-1.2.1&q=80&w=300" alt="Puppy with Bowtie" width="300">
+        <img src="https://images.unsplash.com/photo-1574158622640-d29b818c7490?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDF8fGRvZ2luZ3xlbnwwfHx8fDE2ODAxMTE4MjU&ixlib=rb-1.2.1&q=80&w=300" alt="Dog with Large Ears" width="300">
+        <img src="https://images.unsplash.com/photo-1602186433204-978c84f9ef88?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDUwfHxzbGVlcGluZyBkb2d8ZW58MHx8fHwxNjgwMTExODM2&ixlib=rb-1.2.1&q=80&w=300" alt="Sleeping Dog" width="300">
+        <img src="https://images.unsplash.com/photo-1574158622730-09b15a3d7e0e?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDIwfHxlZGxkb3xlbnwwfHx8fDE2ODAxMTE4NzY&ixlib=rb-1.2.1&q=80&w=300" alt="Cute Dog in Grass" width="300">
     </div>
 </body>
 </html>
