--- a/public/t1a02-proper-Aden.html
+++ b/public/t1a02-proper-Aden.html
@@ -1,33 +1,87 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>t1a02-proper-Aden</title>
+    <title>Guess the Number Game</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
     <script src="script.js" defer></script> <!-- Link to your JavaScript file -->
     <style>
         body {
-            background-color: blue; /* Default background color */
-            color: white; /* Optional: Change text color for contrast */
+            background: linear-gradient(135deg, #4a90e2, #9013fe); /* Gradient background */
+            color: #ffffff; /* Text color */
+            font-family: 'Arial', sans-serif; /* Change font */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+            text-align: center; /* Center-align text */
         }
+        
+        h1 {
+            margin-bottom: 20px;
+            font-size: 3em; /* Large heading */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Slight shadow for a 3D effect */
+        }
+
+        h2 {
+            margin: 20px 0;
+            font-size: 2em; /* Smaller heading */
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+        }
+
+        label {
+            font-size: 1.2em;
+            margin-bottom: 10px;
+        }
+
+        input[type="color"], input[type="number"] {
+            padding: 10px;
+            border-radius: 5px;
+            border: none;
+            margin: 10px 0;
+            font-size: 1em;
+        }
+
+        button {
+            background-color: #28a745; /* Button color */
+            color: white; /* Text color */
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1.2em;
+            transition: background-color 0.3s ease; /* Smooth transition on hover */
+        }
+
+        button:hover {
+            background-color: #218838; /* Darken button on hover */
+        }
+
+        p {
+            font-size: 1.2em;
+            margin: 10px 0;
+        }
+
         .game-container {
-            text-align: center;
-            margin-top: 20px;
+            background: rgba(255, 255, 255, 0.1); /* Slightly transparent background for game container */
+            padding: 20px;
+            border-radius: 10px; /* Rounded borders */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Drop shadow */
         }
     </style>
 </head>
 <body>
-    <h1 align="center">t1a02-proper-Aden</h1>
-    <div align="center">
+    <h1>Guess the Number Game</h1>
+    <div>
         <label for="colorPicker">Choose a background color:</label>
         <input type="color" id="colorPicker" value="#0000ff"> <!-- Default value is blue -->
     </div>
 
     <div class="game-container">
-        <h2>Guess the Number Game!</h2>
-        <p>I'm thinking of a number between 1 and 1000.</p>
+        <h2>I'm thinking of a number between 1 and 1000.</h2>
         <input type="number" id="guessInput" placeholder="Enter your guess" min="1" max="1000">
         <button id="guessButton">Submit Guess</button>
         <p id="resultMessage"></p>
