--- a/public/t1a02-proper-Aden.html
+++ b/public/t1a02-proper-Aden.html
@@ -79,7 +79,7 @@
     </style>
 </head>
 <body>
-    <h1>Guess the Number Game</h1>
+    <h1>t1a02-proper-Aden.html</h1>
     <div>
         <label for="colorPicker">Choose a background color:</label>
         <input type="color" id="colorPicker" value="#0000ff"> <!-- Default value is blue -->
