--- a/public/t1a0-basic.html
+++ b/public/t1a0-basic.html
@@ -1,3 +1,6 @@
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,7 +47,8 @@
         
         <img src="https://i.ibb.co/w7j0ctz/image.jpg" alt="Another Image" width="300">
 
-         <img src="https://beautifuldesktopwallpapers2014.blogspot.com/2013/11/beautiful-puppies-dogs.html" alt="Puppy" width="300">
+        <!-- Replaced with a valid image link -->
+        <img src="https://i.imgur.com/0f3qzTD.jpg" alt="Cute Puppy" width="300">
         
     </div>
 </body>
