--- a/public/t1a0-basic.html
+++ b/public/t1a0-basic.html
@@ -48,7 +48,7 @@
         <img src="https://i.ibb.co/w7j0ctz/image.jpg" alt="Another Image" width="300">
 
         <!-- Replaced with a valid image link -->
-        <img src="https://i.imgur.com/0f3qzTD.jpg" alt="Cute Puppy" width="300">
+        <img src="https://2.bp.blogspot.com/-PIWqtE6GA34/UpYSJwcGdqI/AAAAAAAADFQ/--8tRwUVaVg/s1600/beautiful-puppies-dogs-2014.jpg" alt="Cute Puppy" width="300">
         
     </div>
 </body>
